--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -34,7 +34,7 @@ http {
         server_name mysite.com;
         access_log logs/www.log;    
         location / {
-            root view;
+            root client;
             index index.html;
         }
 
